package org.domain.model.examtemplate.domain;

public enum FeedbackType {

    NONE,

    ON_SUBMISSION,

    AFTER_CLOSING
}
