package org.domain.model.examtemplate.domain;

public enum GradeType {
    NONE,
    ON_SUBMISSION,
    AFTER_CLOSING
}
